secondfile/objects/MIS_1year_OveragePrices__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Overage price list for the MIS 1 years</description>
    <fields>
        <fullName>Master_Agent__c</fullName>
        <description>Contains the price for the Master Agent</description>
        <inlineHelpText>Contains the price for the Master Agent</inlineHelpText>
        <label>Master Agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platinum_Elite__c</fullName>
        <description>Contains the price for the Platinum Elite user</description>
        <inlineHelpText>Contains the price for the Platinum Elite user</inlineHelpText>
        <label>Platinum Elite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <description>Contains the price for the Platinum user</description>
        <inlineHelpText>Contains the price for the Platinum user</inlineHelpText>
        <label>Platinum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RateEffectiveDate__c</fullName>
        <description>For storing the rate effective start date</description>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RateExpiredDate__c</fullName>
        <description>For storing the rate expiration date</description>
        <label>Rate Expired Date</label>
        <type>Date</type>
    </fields>
    <label>MIS_1year_OveragePrices</label>
    <listViews>
        <fullName>X1_Year</fullName>
        <columns>NAME</columns>
        <columns>Master_Agent__c</columns>
        <columns>Platinum__c</columns>
        <columns>Platinum_Elite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
        </filters>
        <label>1 Year</label>
    </listViews>
</CustomObject>